chore: Change to get proper error messages